data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_920.wast
;; 1. **Test Description:** Define a nested block structure with an outer block containing a `call` to a function, and an inner block containing a `br` instruction that targets the outer block. Verify if the function call's stack frame is correctly managed after the branch.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32)
        (block (result i32)
          (br 1)
          (call 0)
        )
      )
    )
    (func (result i32)
      (i32.const 1)
    )
  )
  "type mismatch"
)